New posts and assets

--- a/_posts/2023-10-11-BackEnd.md
+++ b/_posts/2023-10-11-BackEnd.md
@@ -1,10 +1,8 @@
 ---
-title: Who am I?
+title: Back-End Self-Studying
 date: 2023-10-04 12:00:00 +0800
-categories: [Introduction, About Me]
-tags: [ChulJJA, Chul, Seung]     # TAG names should always be lowercase
-image: /assets/CJ_Floating.jpg
-pin: true
+categories: [2. Projects, Back-End]
+tags: [Studying, Back-End, Server]     # TAG names should always be lowercase
 ---
 
 <h1>Who Am I?</h1>
