--- a/_posts/2025-03-24.md
+++ b/_posts/2025-03-24.md
@@ -2,6 +2,7 @@
 title: "AWS VPC Showcase"
 author: "Taszid Chowdhury"
 date: "2025-03-24"
+catagories: [VPC]
 description: "An interactive walkthrough and explanation of AWS VPC architecture, including Terraform scripts, setup instructions, and key cloud networking concepts."
 tags: ["AWS", "VPC", "Cloud Computing", "Terraform", "Networking"]
 image: "ResourceMap.png"
