--- a/_posts/Database/2025-05-09-Redis.md
+++ b/_posts/Database/2025-05-09-Redis.md
@@ -8,7 +8,7 @@ tags: [NoSQL]
 
 <br>
 
-이전 회사에서 야구장 혼잡도 프로젝트를 진행한 적이 있다. 프로젝트 목표는 실시간 야구장 혼잡도를 나타내는 것이였고 이를 위해 Message Queue로 Redis를 사용했다. 당시 기한이 길지 않았기에 간단하고 빠른 Redis를 선택했었는데 조금 더 알아보고자 한다.
+회사에서 야구장 혼잡도 프로젝트를 진행한 적이 있다. 프로젝트 목표는 실시간 야구장 혼잡도를 나타내는 것이였고 이를 위해 Message Queue로 Redis를 사용했다. 당시 기한이 길지 않았기에 간단하고 빠른 Redis를 선택했었는데 조금 더 알아보고자 한다.
 
 <br>
 
