--- a/_posts/Database/2025-05-09-RDBMS.md
+++ b/_posts/Database/2025-05-09-RDBMS.md
@@ -37,31 +37,31 @@ tags: [RDBMS]
 - **수평 확장 어려움**: 서버 스펙을 올리는 방식(수직 확장)이 주가 됨
 - **비정형/대규모 데이터 처리에 불리함**
 
-## 🗃️ 대표적인 RDBMS 종류
+## 대표적인 RDBMS 종류
 
-### 1. MySQL
+### MySQL
 - **오픈소스** 관계형 데이터베이스이며, 전 세계적으로 가장 널리 사용됨
 - Oracle이 소유하고 있음
 - 웹 애플리케이션, 스타트업, 중소 규모 서비스에 적합
 - 빠른 읽기 성능과 쉬운 사용성 제공
 
-### 2. PostgreSQL
+### PostgreSQL
 - **객체 관계형 데이터베이스(ORDBMS)**로, 고급 기능과 표준 준수가 강점
 - 오픈소스이며, ACID 완벽 지원
 - 복잡한 쿼리, JSON 처리, GIS 기능(PostGIS) 등에 뛰어남
 - 확장성과 커스터마이징이 뛰어나 대규모 시스템에도 적합
 
-### 3. Oracle Database
+### Oracle Database
 - **상용 RDBMS의 대표주자**, 대기업 및 금융권에서 많이 사용됨
 - 뛰어난 보안, 트랜잭션 처리 성능, 복잡한 비즈니스 로직에 적합
 - 고가의 라이선스 비용이 있음
 
-### 4. Microsoft SQL Server
+### Microsoft SQL Server
 - Microsoft에서 개발한 상용 RDBMS
 - Windows 환경에 최적화되어 있으며, .NET 프레임워크와 잘 통합됨
 - GUI 툴(SQL Server Management Studio)로 관리가 편리
 
-### 5. MariaDB
+### MariaDB
 - MySQL의 포크(Fork) 버전, MySQL과 **호환성 유지**
 - 오픈소스이며, Oracle 소유의 MySQL을 대체하고자 등장
 - MySQL 대비 기능 확장에 더 적극적
