add cluster image

--- a/_posts/MLOps/2025-05-10-Cluster.md
+++ b/_posts/MLOps/2025-05-10-Cluster.md
@@ -10,7 +10,7 @@ tags: [Cluster]
 
 - 클러스터는 여러 대의 컴퓨터(혹은 서버)를 하나의 시스템처럼 연결하여 처리 능력을 향상시키고, 높은 가용성, 확장성, 부하 분산 등을 제공하는 기술
 - 클러스터는 **하드웨어와 소프트웨어의 결합**으로, 여러 대의 서버나 컴퓨터가 협력하여 작업을 분담하고 처리할 수 있게 만들어짐
-![image](./assets/img/cluster.png)
+<img src="https://github.com/user-attachments/assets/4706cf3a-1791-4d33-8211-ce81949480d4" alt="cluster" width="400"/>
 
 ## 클러스터의 주요 특징
 
